Fix hr spacing

--- a/src/main.css
+++ b/src/main.css
@@ -53,6 +53,7 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5,
+hr {
 	margin: 0;
 }
